--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
         "web": "expo start --web",
         "test": "jest --watchAll",
         "lint": "expo lint",
-        "format": "npx prettier . --write"
+        "format": "npx prettier . --write",
+        "export-web": "npx expo export --platform web",
+        "docker:build": "docker build -t sudoku-web-app .",
+        "docker:start": "docker run -p 3000:80 sudoku-web-app",
+        "maybe docker publish or pull down to run latest img": "echo todo"
     },
     "jest": {
         "preset": "jest-expo"
