--- a/.github/workflows/version-bump-deploy.yml
+++ b/.github/workflows/version-bump-deploy.yml
@@ -21,6 +21,9 @@ jobs:
             - name: Install dependencies
               run: npm install
 
+            - name: Build Web to /dist
+              run: npm run export-web
+
             - name: Get version from package.json - store as env variable
               id: version
               run: |
