update publish script for changesets-release.yml workflow

--- a/.github/workflows/changesets-release.yml
+++ b/.github/workflows/changesets-release.yml
@@ -26,10 +26,13 @@ jobs:
             - name: Install dependencies
               run: npm install --frozen-lockfile
 
+            - name: Build Web App to /dist
+              run: npm run export-web
+
             - name: Create Release PR or GitHub Release
               uses: changesets/action@v1
               with:
-                  publish: npm run release
+                  publish: npm run publish
                   setupGitUser: true
                   createGithubReleases: true
               env:
