--- a/.github/workflows/changesets-release.yml
+++ b/.github/workflows/changesets-release.yml
@@ -29,11 +29,7 @@ jobs:
             - name: Build Web App to /dist
               run: npm run export-web
 
-            - name: Create Release PR or GitHub Release
+            - name: Create Release Pull Request
               uses: changesets/action@v1
-              with:
-                  publish: npm run publish
-                  setupGitUser: true
-                  createGithubReleases: true
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
