--- a/.github/workflows/changesets-release.yml
+++ b/.github/workflows/changesets-release.yml
@@ -30,6 +30,11 @@ jobs:
               run: npm run export-web
 
             - name: Create Release Pull Request
+              id: changesets
               uses: changesets/action@v1
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+            - name: Publish
+              if: steps.changesets.outputs.hasChangesets == 'false'
+              run: echo "hasChangesets == false, running publish" && npm run publish
