--- a/.github/workflows/changesets-release.yml
+++ b/.github/workflows/changesets-release.yml
@@ -29,12 +29,10 @@ jobs:
             - name: Build Web App to /dist
               run: npm run export-web
 
-            - name: Create Release Pull Request
-              id: changesets
+            - name: Create Release Pull Request or GitHub Release
               uses: changesets/action@v1
+              with:
+                  publish: echo "Skipping npm publish"
+                  createGithubReleases: true
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-            - name: Publish
-              if: steps.changesets.outputs.hasChangesets == 'false'
-              run: echo "hasChangesets == false, running publish" && npm run publish
