--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
         "format": "npx prettier . --write",
         "export-web": "npx expo export --platform web",
         "docker:build": "docker build -t sudoku-web-app .",
-        "docker:start": "docker run -p 3000:80 sudoku-web-app",
-        "docker:stop": "docker stop sudoku-web-app",
         "changeset": "npx changeset",
-        "publish": "npx changeset publish"
+        "publish": "echo 'running publish' && npx changeset publish"
     },
     "jest": {
         "preset": "jest-expo"
