--- a/.github/workflows/changesets-release.yml
+++ b/.github/workflows/changesets-release.yml
@@ -29,11 +29,22 @@ jobs:
             - name: Build Web App to /dist
               run: npm run export-web
 
-            - name: Create Release PR or GitHub Release
+            - name: Create Release Pull Request or Publish to npm
+              id: changesets
               uses: changesets/action@v1
-              with:
-                  publish: npm run publish
-                  setupGitUser: true
-                  createGithubReleases: true
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+            - name: Tag and Create Release
+              if: steps.changesets.outputs.hasChangesets == 'false'
+              # You can do something when a publish should happen.
+              run: |
+                  VERSION=$(node -p "require('./package.json').version")
+                  git tag "v$VERSION"
+                  git push origin "v$VERSION"
+                  curl -X POST \
+                    -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                    -d '{"tag_name": "v'$VERSION'", "name": "Release v'$VERSION'", "body": "Release version v'$VERSION'", "draft": false, "prerelease": false}' \
+                    https://api.github.com/repos/${{ github.repository }}/releases
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
